--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -21,9 +21,22 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install dev tools
+      - name: Clean and install working version of bump-my-version
         run: |
-          pip install -r dev-requirements.txt
+          pip uninstall -y bump-my-version bumpversion click-configfile || true
+          pip install bump-my-version==1.1.3 click-configfile==0.2.2
+          bump-my-version --version
+          python -c "import bumpversion.click_config; print('bumpversion from:', bumpversion.click_config.__file__)"
+
+      - name: Install remaining dev dependencies
+        run: |
+          pip install \
+            pytest>=7.0.0 \
+            flake8>=5.0.0 \
+            mypy>=1.0.0 \
+            black>=23.0.0 \
+            isort>=5.12.0 \
+            pip-audit>=2.6.1
 
       - name: Configure Git identity
         run: |
