--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -31,7 +31,7 @@ jobs:
           git config user.email "github-actions@github.com"
 
       - name: Bump patch version
-        run: bump-my-version bump patch
-
+        run: bump-my-version --config-file=pyproject.toml bump patch
+        
       - name: Push version bump
         run: git push origin main --follow-tags
